# python-uv-template

./: README.md  app.py  pyproject.toml
